test/compile_errors/err_null_not_reference.w
//! expect-check-fail: null requires pointer type context

fn main:
    let r: &i32 = null
